# wobbler

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  README_WOBBLER.md  SETUP.md  SETUP_STATUS.md  TESTING.md  package-lock.json  test.sh
.windsurf/: CASCADE_DOCUMENTATION_POLICY.md
.windsurf/workflows/: doc.md  plan.md  remember.md  test.md
docs/: README.md  api-reference.md  architecture.md  deployment.md  getting-started.md  troubleshooting.md  user-guide.md
docs/instructions/: AUSBAUPLAN.md  DEVELOPMENT_RULES.md  WINDSURF_BRIEFING.md  testing-guide.md  v5_restored.html  voice-module-final.html  wobble-analyzer (1).html
docs/kanban/: README.md  TEMPLATE-feature-plan.md
docs/maxforlive/: Max9-JS-API-en.txt  Max9-LOM-en.txt  Max9-NodeForMax-API-en.txt  Max9-UserGuide-en.txt  RNBO-M4L-Architecture.md
electron-app/: main.js  package-lock.json  package.json  preload.js
max-for-live/: README.md  Wobbler-Dev.maxpat  wobbler-voice.rnbo
python/: requirements.txt
python/preprocessing/: feature_extraction.py  pattern_detection.py  source_separation.py
python/training/: dataset.py  model.py  train_pattern_model.py
src/ai/: LockFreeQueue.h  ONNXInference.cpp  ONNXInference.h  PatternGenerator.cpp  PatternGenerator.h
src/dsp/: Distortion.cpp  Distortion.h  Envelope.cpp  Envelope.h  Filter.cpp  Filter.h  LFO.cpp  LFO.h  Oscillator.cpp  Oscillator.h
src/modulation/: AIModulationSource.cpp  AIModulationSource.h  ModulationMatrix.cpp  ModulationMatrix.h  ModulationSource.h
src/plugin/: PluginEditor.cpp  PluginEditor.h  (+6 more)
web-prototype/: README.md  index.html  piano.js  synth.js  synth.legacy.js
(+23 files in other folders)
